Detailed documentation, README update, Makefile development

--- a/latex/classEpidemicSimulation_1_1ChartManager.tex
+++ b/latex/classEpidemicSimulation_1_1ChartManager.tex
@@ -7,11 +7,9 @@
 \item 
 void \mbox{\hyperlink{classEpidemicSimulation_1_1ChartManager_a5b352978762fc627a19448d8b3a35343}{Update}} ()
 \item 
-\mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_a9b7129b8593030a0f23b413f1cf17c3a}\label{classEpidemicSimulation_1_1ChartManager_a9b7129b8593030a0f23b413f1cf17c3a}} 
-void {\bfseries Draw} ()
+void \mbox{\hyperlink{classEpidemicSimulation_1_1ChartManager_a9b7129b8593030a0f23b413f1cf17c3a}{Draw}} ()
 \item 
-\mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_aeee4b0bad2e2ce72ad47db8188445875}\label{classEpidemicSimulation_1_1ChartManager_aeee4b0bad2e2ce72ad47db8188445875}} 
-void {\bfseries Load\+Content} ()
+void \mbox{\hyperlink{classEpidemicSimulation_1_1ChartManager_aeee4b0bad2e2ce72ad47db8188445875}{Load\+Content}} ()
 \end{DoxyCompactItemize}
 
 
@@ -38,13 +36,25 @@ Constructor sets position of the the graph inside a window, size of the graph, i
 
 
 \doxysubsection{Member Function Documentation}
-\mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_a5b352978762fc627a19448d8b3a35343}\label{classEpidemicSimulation_1_1ChartManager_a5b352978762fc627a19448d8b3a35343}} 
+\mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_a9b7129b8593030a0f23b413f1cf17c3a}\label{classEpidemicSimulation_1_1ChartManager_a9b7129b8593030a0f23b413f1cf17c3a}} 
+\index{EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}!Draw@{Draw}}
+\index{Draw@{Draw}!EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}}
+\doxysubsubsection{\texorpdfstring{Draw()}{Draw()}}
+{\footnotesize\ttfamily void Epidemic\+Simulation.\+Chart\+Manager.\+Draw (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+Plots all data\+: infected in red, susceptible in blue, recovered in green and dead in gray. \mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_aeee4b0bad2e2ce72ad47db8188445875}\label{classEpidemicSimulation_1_1ChartManager_aeee4b0bad2e2ce72ad47db8188445875}} 
+\index{EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}!LoadContent@{LoadContent}}
+\index{LoadContent@{LoadContent}!EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}}
+\doxysubsubsection{\texorpdfstring{LoadContent()}{LoadContent()}}
+{\footnotesize\ttfamily void Epidemic\+Simulation.\+Chart\+Manager.\+Load\+Content (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+Initializes instance of Graph and configures it. \mbox{\Hypertarget{classEpidemicSimulation_1_1ChartManager_a5b352978762fc627a19448d8b3a35343}\label{classEpidemicSimulation_1_1ChartManager_a5b352978762fc627a19448d8b3a35343}} 
 \index{EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}!Update@{Update}}
 \index{Update@{Update}!EpidemicSimulation.ChartManager@{EpidemicSimulation.ChartManager}}
 \doxysubsubsection{\texorpdfstring{Update()}{Update()}}
 {\footnotesize\ttfamily void Epidemic\+Simulation.\+Chart\+Manager.\+Update (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
-Method updates 
+Updates the statistics culling them from provided instance of Simulation. 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
