--- a/latex/classEpidemicSimulation_1_1MultigroupCommunitySimulation.tex
+++ b/latex/classEpidemicSimulation_1_1MultigroupCommunitySimulation.tex
@@ -29,6 +29,9 @@ override void {\bfseries Draw} (Game\+Time game\+Time)
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+This class constitues the multigroup community scenario, handling high-\/level events of simulation such as pausing, closing, starting a simulation, providing data and providing a simplified constructor. 
+
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classEpidemicSimulation_1_1MultigroupCommunitySimulation_a88bd5d085f2a599b97db7f0477944333}\label{classEpidemicSimulation_1_1MultigroupCommunitySimulation_a88bd5d085f2a599b97db7f0477944333}} 
 \index{EpidemicSimulation.MultigroupCommunitySimulation@{EpidemicSimulation.MultigroupCommunitySimulation}!Close@{Close}}
