--- a/latex/classEpidemicSimulation_1_1Person.tex
+++ b/latex/classEpidemicSimulation_1_1Person.tex
@@ -9,8 +9,7 @@ Inheritance diagram for Epidemic\+Simulation.\+Person\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{classEpidemicSimulation_1_1Person_adae0bb5561c3abf9ef4ec6b68ae5c58f}\label{classEpidemicSimulation_1_1Person_adae0bb5561c3abf9ef4ec6b68ae5c58f}} 
-abstract string {\bfseries Type} ()
+abstract string \mbox{\hyperlink{classEpidemicSimulation_1_1Person_adae0bb5561c3abf9ef4ec6b68ae5c58f}{Type}} ()
 \item 
 \mbox{\Hypertarget{classEpidemicSimulation_1_1Person_a6676b1efef40eca44df78f28b9cea98e}\label{classEpidemicSimulation_1_1Person_a6676b1efef40eca44df78f28b9cea98e}} 
 {\bfseries Person} (Rectangle Simulation\+Rect, float? immunity=null, int? repulsion\+Rate=null)
@@ -105,6 +104,19 @@ bool {\bfseries Repulsion\+Expand}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
 \mbox{\Hypertarget{classEpidemicSimulation_1_1Person_a1e977d0cfc16524a4f112ac1dad776dd}\label{classEpidemicSimulation_1_1Person_a1e977d0cfc16524a4f112ac1dad776dd}} 
 Rectangle {\bfseries Radius\+Rect}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{classEpidemicSimulation_1_1Person_adae0bb5561c3abf9ef4ec6b68ae5c58f}\label{classEpidemicSimulation_1_1Person_adae0bb5561c3abf9ef4ec6b68ae5c58f}} 
+\index{EpidemicSimulation.Person@{EpidemicSimulation.Person}!Type@{Type}}
+\index{Type@{Type}!EpidemicSimulation.Person@{EpidemicSimulation.Person}}
+\doxysubsubsection{\texorpdfstring{Type()}{Type()}}
+{\footnotesize\ttfamily abstract string Epidemic\+Simulation.\+Person.\+Type (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [pure virtual]}}
+
+
+
+Implemented in \mbox{\hyperlink{classEpidemicSimulation_1_1Dead_a9f4ed95b6db3afdbac8fa784ebde7788}{Epidemic\+Simulation.\+Dead}}, \mbox{\hyperlink{classEpidemicSimulation_1_1Infectious_a5eb2d6c1074352e73fa764d696971718}{Epidemic\+Simulation.\+Infectious}}, \mbox{\hyperlink{classEpidemicSimulation_1_1Recovered_af619643a38830cf8e3ab108783d6a065}{Epidemic\+Simulation.\+Recovered}}, and \mbox{\hyperlink{classEpidemicSimulation_1_1Susceptible_aabc3338d6f63a613a46b311ccf20ae69}{Epidemic\+Simulation.\+Susceptible}}.
+
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
