--- a/latex/classEpidemicSimulation_1_1ShoppingCommunitySimulation.tex
+++ b/latex/classEpidemicSimulation_1_1ShoppingCommunitySimulation.tex
@@ -22,6 +22,9 @@ void \mbox{\hyperlink{classEpidemicSimulation_1_1ShoppingCommunitySimulation_aef
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+This class constitues the shopping community scenario, handling high-\/level events of simulation such as pausing, closing, starting a simulation, providing data and providing a simplified constructor. 
+
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classEpidemicSimulation_1_1ShoppingCommunitySimulation_aef4a6270869bc40ccc8b028aae3d507c}\label{classEpidemicSimulation_1_1ShoppingCommunitySimulation_aef4a6270869bc40ccc8b028aae3d507c}} 
 \index{EpidemicSimulation.ShoppingCommunitySimulation@{EpidemicSimulation.ShoppingCommunitySimulation}!Close@{Close}}
@@ -29,7 +32,7 @@ void \mbox{\hyperlink{classEpidemicSimulation_1_1ShoppingCommunitySimulation_aef
 \doxysubsubsection{\texorpdfstring{Close()}{Close()}}
 {\footnotesize\ttfamily void Epidemic\+Simulation.\+Shopping\+Community\+Simulation.\+Close (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
-
+Closes the simulation. 
 
 Implements \mbox{\hyperlink{interfaceEpidemicSimulation_1_1ISimulation}{Epidemic\+Simulation.\+ISimulation}}.
 
@@ -49,7 +52,7 @@ Implements \mbox{\hyperlink{interfaceEpidemicSimulation_1_1ISimulation}{Epidemic
 \doxysubsubsection{\texorpdfstring{Pause()}{Pause()}}
 {\footnotesize\ttfamily void Epidemic\+Simulation.\+Shopping\+Community\+Simulation.\+Pause (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
-
+Pauses and unpauses the simulation. 
 
 Implements \mbox{\hyperlink{interfaceEpidemicSimulation_1_1ISimulation}{Epidemic\+Simulation.\+ISimulation}}.
 
@@ -59,7 +62,7 @@ Implements \mbox{\hyperlink{interfaceEpidemicSimulation_1_1ISimulation}{Epidemic
 \doxysubsubsection{\texorpdfstring{Start()}{Start()}}
 {\footnotesize\ttfamily void Epidemic\+Simulation.\+Shopping\+Community\+Simulation.\+Start (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
-
+Starts the simulation. 
 
 Implements \mbox{\hyperlink{interfaceEpidemicSimulation_1_1ISimulation}{Epidemic\+Simulation.\+ISimulation}}.
 
