--- a/latex/classProgram.tex
+++ b/latex/classProgram.tex
@@ -6,6 +6,11 @@ Inheritance diagram for Program\+:\begin{figure}[H]
 \includegraphics[height=2.000000cm]{classProgram}
 \end{center}
 \end{figure}
+\doxysubsection*{Public Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+\mbox{\hyperlink{classProgram_ac409434b53f9838823043bd6ce0a8377}{Program}} ()
+\end{DoxyCompactItemize}
 \doxysubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -13,6 +18,15 @@ Inheritance diagram for Program\+:\begin{figure}[H]
 static void {\bfseries Main} ()
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{classProgram_ac409434b53f9838823043bd6ce0a8377}\label{classProgram_ac409434b53f9838823043bd6ce0a8377}} 
+\index{Program@{Program}!Program@{Program}}
+\index{Program@{Program}!Program@{Program}}
+\doxysubsubsection{\texorpdfstring{Program()}{Program()}}
+{\footnotesize\ttfamily Program.\+Program (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+Constructor setting up the postions of all user interface components such as buttons, radio boxes, sliders, and the size of the main window. 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
